--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -6,9 +6,10 @@
   <div class="form-group">
     </select>
   <div class="form-group">
-    <label for="content">Content</label>
-    <textarea type="text" class="form-control" id="content" name="data" required></textarea>
+    <label for="content"></label>
+    <textarea type="text" class="form-control" id="showpost" name="data" required></textarea>
   </div>
+  <body class="bb"></body>
 
   <button type="submit" class="postBtn">Post</button>
 </form>
