--- a/views/postsshow.ejs
+++ b/views/postsshow.ejs
@@ -1,3 +1,5 @@
-<% for (let i = 0; i <= posts.length; i++){ %>
-<div><%=  posts[i].dataValues.data %></div>
-<%  } %>
+<ul>
+    <% posts.forEach(function(post) { %>
+      <li><%= post.data %></li>
+    <% }) %>
+  </ul>
