--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,8 +19,11 @@
             <li><a id='signup' href="/auth/signup">Signup</a></li>
             <li><a id='login' href="/auth/login">Login</a></li>
             <% } else { %>
-              <li><a href="/auth/logout">Logout</a></li>
-              <li><a href="/profile">Profile</a></li>
+              <li><a id='signup' href="/auth/logout">Logout</a></li>
+              <li><a id='signup' href="/profile">Profile</a></li>
+              <li><a id='signup' href="/post">Start a Conversation</a></li>
+              <li><a id='signup' href="/post/posts">Get In The Conversation</a></li>
+
               <% } %>
         </ul>
       </nav>
