--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,5 @@
-<h2 id=hp>Welcome</h2>
+<h1 id=hp>Welcome to Book Club </h1>
+<h4 id=hp>Where Conversations Happen</h4>
 <p></p>
+<body id=hmpg></body>
+<img id="img" src="https://media.giphy.com/media/TWCf83eMB06aHrBDNC/giphy.gif" >
