--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,11 +18,12 @@
           <% if (!currentUser) {%>
             <li><a id='signup' href="/auth/signup">Signup</a></li>
             <li><a id='login' href="/auth/login">Login</a></li>
+            <li><a id='signup' href="/post/posts">Get In The Conversation</a></li>
             <% } else { %>
               <li><a id='signup' href="/auth/logout">Logout</a></li>
               <li><a id='signup' href="/profile">Profile</a></li>
-              <li><a id='signup' href="/post">Start a Conversation</a></li>
-              <li><a id='signup' href="/post/posts">Get In The Conversation</a></li>
+              <li><a id='signup' href="/post">Start the Conversation</a></li>
+         
 
               <% } %>
         </ul>
