--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,3 +53,9 @@ nav {
 bb {
   background: rgb(49, 48, 48);
 }
+.commentBtn {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 18px;
+  background-color: white;
+  text-align: center;
+}
