--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,4 +58,25 @@ bb {
   font-size: 18px;
   background-color: white;
   text-align: center;
+  border: 2px solid black;
+}
+.postLook {
+  background-color: white;
+}
+
+#showcomment {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  background-color: white;
+  border: 2px solid black;
+  width: 400;
+}
+
+#postStyle {
+  font-size: 40px;
+  width: 300px;
+  border: 2px solid black;
+  padding: 40px;
+  margin: 20px;
+  text-align: center;
+  list-style-type: none;
 }
