--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,5 @@
 <h2>Profile Page</h2>
-<form action="/profile" method="POST" enctype="multipart/form-data">
+<form action="/profile/<%= id %>/?_method=PUT" method="POST" enctype="multipart/form-data">
     <label for="inputFile">Image</label>
     <input type="file" name="inputFile">
     <button type="submit" class="imgbtn">Upload Image</button>
@@ -11,6 +11,6 @@
 <p>Id: <%= id %></p>
 <p>Name: <%= name %></p>
 <p>Email: <%= email %></p>
-
+<img src="<%= image %>" alt="Profile Picture">
 
 
