--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,9 +1,12 @@
-<form action="/auth/login" method="POST">
+<form id="auth" action="/auth/login" method="POST">
   <label for="auth-email">Email</label>
   <input id="auth-email" type="email" name="email">
 
-  <label for="auth-password">Password</label>
+  <label id="auth-password" for="auth-password">Password</label>
   <input id="auth-password" type="password" name="password">
 
-  <input type="submit" value="Log In">
+  <input id="logbtn" type="submit" value="Log In">
 </form>
+<body id="lb">
+
+</body>
