--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,4 +1,4 @@
-<form action="/auth/signup" method="POST">
+<form id="auth" action="/auth/signup" method="POST">
   <label for="new-email">Email</label>
   <input id="new-email" type="email" name="email">
 
@@ -10,3 +10,4 @@
 
   <input type="submit" value="Sign up">
 </form>
+<body id="lb"></body>
