--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,5 +12,5 @@
 <p>Name: <%= name %></p>
 <p>Email: <%= email %></p>
 <img src="<%= image %>" alt="Profile Picture">
-
+<body id="pbody"></body>
 
