--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -1,5 +1,5 @@
 
-<h1>Start the Conversation</h1>
+
 
 <form action="/post" method="POST">
 
@@ -7,7 +7,7 @@
     </select>
   <div class="form-group">
     <label for="content"></label>
-    <textarea type="text" class="form-control" id="showpost" name="data" required></textarea>
+    <textarea type="text" class="form-group" id="showpost" name="data" required></textarea>
   </div>
 
 
