--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,12 +4,6 @@ nav ul li {
   margin-right: 0.3em;
 }
 
-h1 {
-  color: black;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  text-align: center;
-}
-
 #signup {
   color: black;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
@@ -31,8 +25,11 @@ nav {
 .postBtn {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 30px;
-  background-color: white;
+  background-color: rgb(255, 210, 217);
   text-align: center;
+  position: absolute;
+  top: 110%;
+  left: 46%;
 }
 .bb {
   background-image: url();
@@ -55,33 +52,79 @@ bb {
 }
 .commentBtn {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  font-size: 18px;
-  background-color: white;
+  background-color: rgb(182, 214, 250);
   text-align: center;
   border: 2px solid black;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  float: left;
+  font-size: 22px;
+  border-bottom: 6px solid;
+  margin-bottom: 50px;
+}
+#text {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  background-color: rgb(182, 214, 250);
+  border: 2px solid black;
+  width: 400px;
+  height: 80px;
+  position: absolute;
+  top: 72%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  float: left;
+  font-size: 16px;
+  border-bottom: 6px solid;
+  margin-bottom: 50px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 .postLook {
   background: url(https://images.unsplash.com/photo-1557672211-0741026eacfb?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)
     no-repeat;
   background-size: cover;
-  opacity: 0.7;
+  opacity: 0.6;
 }
 
 #showcomment {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  background-color: white;
+  background-color: rgb(182, 214, 250);
   border: 2px solid black;
   width: 400px;
+  height: 80px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  float: left;
+  font-size: 16px;
+  border-bottom: 6px solid;
+  margin-bottom: 50px;
+  padding: 5px 0;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 #postStyle {
-  font-size: 40px;
-  width: 300px;
+  background-color: rgb(182, 214, 250);
+  font-size: 30px;
+  width: 600px;
+  height: 220px;
   border: 2px solid black;
   padding: 40px;
   margin: 20px;
   text-align: center;
   list-style-type: none;
+  position: absolute;
+  top: 25%;
+  left: 49%;
+  transform: translate(-50%, -50%);
+  float: left;
+  font-size: 30px;
+  border-bottom: 6px solid;
+  margin-bottom: 50px;
+  padding: 13px 0;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 #text {
   list-style-type: none;
@@ -123,4 +166,26 @@ bb {
     no-repeat;
   background-size: cover;
   opacity: 0.7;
+}
+.form-group {
+  background-color: rgb(255, 210, 217);
+  width: 700px;
+  height: 250px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  float: left;
+  font-size: 30px;
+  border-bottom: 6px solid;
+  margin-bottom: 50px;
+  padding: 13px 0;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+#pbody {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  margin: auto;
+}
+#imgSz {
+  width: 250px;
 }
